<?xml version="1.0"?>
<package format="2">
  <name>teleoperation_msgs</name>
  <version>0.0.0</version>
  <description>The teleoperation_msgs package</description>

  <maintainer email="chensong@link.cuhk.edu.hk">perry</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

</package>